# bose_hubbard

./: .gitignore  Cargo.toml  entrypoint.sh  run.sh
.cargo/: config.toml
ci/: build_image.sh  ensure_image.sh  utils.sh
pysrc/: plotting_cli.py  run_dynamics_cli.py  test_rust_code.py  utils.py
result/debug_config/2023-08-07_14:04:21/: data.hdf5  log.yaml
src/: basis.rs  basis_hashing.rs  basis_iterator.rs  hamiltonian.rs  lib.rs  search.rs
tasks/: bh_gap=1_int=1.yaml  bh_gap=1_int=2.yaml  bh_gap=1_int=3.yaml  bh_gap=1_int=4.yaml  bh_gap=1_int=5.yaml  bh_gap=2_int=1.yaml  bh_gap=2_int=2.yaml  bh_gap=2_int=3.yaml  bh_gap=2_int=4.yaml  bh_gap=2_int=5.yaml  debug.yaml  hcb_gap=1_int=1.yaml  hcb_gap=1_int=2.yaml  hcb_gap=1_int=3.yaml  hcb_gap=1_int=4.yaml  hcb_gap=1_int=5.yaml  hcb_gap=2_int=1.yaml  hcb_gap=2_int=2.yaml  hcb_gap=2_int=3.yaml  hcb_gap=2_int=4.yaml  hcb_gap=2_int=5.yaml
