[package]
name = "bose-hubbard"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = "0.4.3"
rayon = "1.7.0"
numpy = "0.19.0"
num_cpus = "1.16.0"
#jemallocator = "0.5.4"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true

[dependencies.pyo3]
version = "0.19.2"

[features]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
default = ["extension-module"]

[lib]
name = "bose_hubbard"
crate-type = ["cdylib", "rlib"]